syntax = "proto3";
package nodes;

option go_package = "github.com/snple/kokomi/pb/nodes;nodes";

import "user_message.proto";
import "generic_message.proto";

service UserService {
    rpc View(pb.Id) returns (pb.User) {}
}
